[project]
name = "kg-demo"
version = "0.1.0"
description = "Knowledge Graph Demo"
authors = [
    {name = "Bodie",email = "46969107+riddles-in-the-dark@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=1.2.0,<2.0.0",
    "networkx>=2.5,<3.0.0",
    "matplotlib>=3.3.3,<4.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
